frontend/tests/cases/positive/interface-simple-24.gr
interface Simple a where
  simple : a -> a

data A a = A'

-- instance with complex constraint
instance {Simple (A a)} => Simple a where
  simple x = x
