frontend/tests/cases/negative/interfaces/no-instance/noContextForInterfaceInInstance.gr
interface Simple a where
  simple : a -> a

interface Simple2 a where
  simple2 : a -> a


data Foo a = Foo a


-- no instance for '{Simple a}'
-- (arising from the use of 'simple')
instance Simple2 (Foo a) where
  simple2 (Foo x) = Foo (simple x)
